# mike_av_stack

./: .env  .gitignore  CMakeLists.txt  CMakeLists2.txt  README.md  package.xml  package2.xml  requirements.txt  requirements2.txt  requirements3.txt  run.sh  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/pkgconfig/: mike_av_stack.pc
devel/share/mike_av_stack/cmake/: mike_av_stackConfig.cmake
launch/: av_sf.launch.py  mike_av_stack.launch  sensor_fusion.launch
mike_av_stack/point_cloud_stacker/: point_cloud_stacker.py
mike_av_stack/traffic_manager/: traffic_manager.py
mike_av_stack/visualizations/: visualizations.py
scripts/localization/: helper.h  icp.cpp  icp.h  icps.cpp  icps.h  localization.cpp  ndt.cpp  ndt.h  scan_matching.cpp  scan_matching.h
scripts/sensor_fusion/tracking/: measurements.py
src/mike_av_stack/: CMakeLists.txt  carla_ros_topic.py  package.xml
src/mike_av_stack/launch/: localization.launch  mike_av_stack.launch  sensor_fusion.launch  tools.launch  traffic_manager.launch
src/mike_av_stack/scripts/: objdet_detect.py  objdet_pcl.py  sensor_fusion.py
src/mike_av_stack/scripts/localization/: helper.cpp  helper.h  icp.cpp  icp.h  icps.cpp  icps.h  localization.cpp  ndt.cpp  ndt.h  scan_matching.cpp  scan_matching.h
src/mike_av_stack/scripts/point_cloud_stacker/: point_cloud_stacker.py
src/mike_av_stack/scripts/sensor_fusion/: sensor_fusion.py
src/mike_av_stack/scripts/sensor_fusion/configs/: sensors.json  tracking.json
src/mike_av_stack/scripts/sensor_fusion/detection/: darknet.json  objdet_detect.py  resnet.json
src/mike_av_stack/scripts/sensor_fusion/tracking/: association.py  filter.py  measurements.py  trackmanagement.py
src/mike_av_stack/scripts/tools/objdet_models/resnet/pretrained/: fpn_resnet_18_epoch_300.pth
src/mike_av_stack/scripts/tools/ros_conversions/: transformations.py
src/mike_av_stack/wiki/: sensor_fusion.md
wiki/: sensor_fusion.md
